Fixed title alignment

--- a/_sass/components/_c-section-title.scss
+++ b/_sass/components/_c-section-title.scss
@@ -1,6 +1,6 @@
 .c-section-title {
   position: relative;
-  // padding-bottom: rem(50px);
+  padding-bottom: rem(50px);
   font-size: rem(50px);
   font-weight: 400;
   color: $font-color-1;
@@ -15,7 +15,7 @@
   &:after {
     content: "";
     position: absolute;
-    top: rem(110px);
+    bottom: 0;
     left: 0;
     width: rem(60px);
     height: rem(3px);
